# aws-serverless-auth-management

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
authmgmt/: README.md  package-lock.json  package.json  serverless.yml
backendDev/: .gitignore  env.json.example  json_env_loader.py  pyproject.toml
backendDev/devtools/: create_lambda_functions.py  create_lambda_role.py  invoke_lambda_function.py
backendDev/handlers/: helloworld.py
backendDev/libs/files/: json.py
frontend/: .babelrc.js  .env  .env.example  config-overrides.js  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/public/js/: config.js
frontend/src/: App.jsx  index.css  index.jsx  routes.js
frontend/src/components/HoC/LoginFormWrapper/: index.jsx
frontend/src/components/HoC/RegisteredFormWrapper/: index.jsx
frontend/src/components/LoadingMask/: index.tsx  styles.module.css  types.tsx
frontend/src/components/LoginForm/: index.jsx
frontend/src/components/RegisteredForm/: index.jsx
frontend/src/layouts/: FullLayout.jsx  TwoColumnLayout.jsx
frontend/src/libs/cognito/: config.js
frontend/src/libs/queries/: AxiosBaseQuery.js  CognitoBaseQuery.js
frontend/src/pages/: SignIn.jsx  SignUp.jsx  UserManagement.jsx
frontend/src/services/: AuthService.js  UserService.js
frontend/src/store/: index.js
frontend/src/store/users/: usersSlice.js
