[tool.poetry]
name = "authmgmt"
version = "0.1.0"
description = ""
authors = ["palapalado <ms0529756@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
boto3 = "^1.24.57"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
